[package]
name = "bloom-filters"
version = "0.1.0"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2018"

[dependencies]
rand = "0.5"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "insert"
harness = false

[[bench]]
name = "contains"
harness = false

[[bench]]
name = "false_positives_rate"
harness = false
