[package]
name = "bloom-filters"
version = "0.1.1"
license = "Apache-2.0 OR MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2018"
description = "Rust port of https://github.com/tylertreat/BoomFilters"
homepage = "https://github.com/nervosnetwork/bloom-filters"
repository = "https://github.com/nervosnetwork/bloom-filters"
keywords = ["bloom-filter"]
categories = ["algorithms", "data-structures"]

[dependencies]
rand = "0.8"

[dev-dependencies]
criterion = "0.2"
proptest = "0.9"

[[bench]]
name = "insert"
harness = false

[[bench]]
name = "contains"
harness = false

[[bench]]
name = "false_positives_rate"
harness = false
